--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"rust-analyzer.cargo.buildScripts.enable": true,
+	"rust-analyzer.inlayHints.typeHints.enable": false,
 	"rust-analyzer.linkedProjects": [
 		".\\loader\\Cargo.toml",
 		".\\Cargo.toml",
